# HypeX

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  tsconfig.base.json
analytics/: requirements.txt
analytics/data/exports/: market_index.csv  metrics.csv  metrics_real.csv  prices_real.csv  titles.csv  titles_dim.csv
analytics/notebooks/: 01_eda.ipynb  01_eda.py  02_backtest.ipynb  02_backtest.py
analytics/pipeline/: combine_tracks.py  generate_synthetic.py  pricing.py  reprice_real.py
analytics/r/: report.R
analytics/reports/: backtest_findings.md  eda_findings.md  r_findings.md
analytics/trends/: build_query_map.py  fetch_trends.py  query_map.csv
analytics/universe/: candidates.csv  fetch_anilist.py  titles.csv
apps/api/: pyproject.toml
apps/api/src/: db.py  main.py  models.py
apps/api/tests/: test_endpoints.py
apps/web/: package-lock.json  package.json
apps/web/src/app/: layout.tsx  page.tsx
apps/web/src/app/portfolio/: page.tsx
apps/web/src/app/series/[id]/: page.tsx
apps/web/src/app/watchlist/: page.tsx
apps/web/src/lib/: api.ts  portfolio.ts  watchlist.ts
apps/worker/: backfill.py  ingest.py  migrate.py  prices.py  pyproject.toml  run.py  sync_titles.py
apps/worker/tests/: test_prices.py
dashboard/: POWERBI_TABLEAU_GUIDE.md  build_dashboard.py
data/registry/: aliases.json  titles.csv
docs/: ARCHITECTURE.md  CASE_STUDY.md  DATA_MODEL.md  REGISTRY.md
scripts/: bootstrap.sh  check-structure.sh  lint.sh
