[project]
name = "hypex"
version = "0.1.0"
description = "TradingView for comics hype"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = ["ruff>=0.8.0", "pytest>=8.0.0"]

[tool.uv.workspace]
members = ["packages/core", "apps/api", "apps/worker", "packages/sources/reddit"]

[tool.pytest.ini_options]
pythonpath = [".", "packages/core/src", "packages/sources/reddit/src"]
addopts = "--import-mode=importlib"
