[project]
name = "hypex-worker"
version = "0.1.0"
description = "HypeX worker: compute daily hype index and prices"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "psycopg[binary]>=3.2.0",
    "hypex-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
